--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ transformers:
 - polymer:
     entry_points:
     - web/index.html
+    - web/auth/login.html
+    - web/auth/create_user.html
     - example/asset_details.html
     - example/asset_list.html
     - example/main_context_example.html
+    - example/strength_meter.html
